--- a/tests/unit/index.html
+++ b/tests/unit/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>gallery-widget-pointer</title>
-    <script src="/build/yui/yui.js"></script>
+    <script src="http://yui.yahooapis.com/3.9.0/build/yui/yui-min.js"></script>
     <script src="js/tests.js"></script>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="../../assets/gallery-widget-pointer-core.css">
+
 </head>
 <body class="yui3-skin-sam">
 <div id="logger"></div>
@@ -12,8 +14,22 @@
 <script>
 YUI({
     coverage: ['gallery-widget-pointer'],
+    groups: {
+        gallery: {
+            base    : '../../../../build/',
+            patterns: {
+                'gallery-'   : {},
+                'gallerycss-': { type: 'css' }
+            },
+            modules: {
+                'gallery-widget-pointer': {
+                    path     : 'gallery-widget-pointer/gallery-widget-pointer.js',
+                }
+            }
+        }
+    },
     filter: (window.location.search.match(/[?&]filter=([^&]+)/) || [])[1] || 'raw'
-}).use('test-console', 'test', 'module-tests', function(Y) {
+}).use('test-console', 'test', 'module-tests', 'gallery-widget-pointer', 'panel', function(Y) {
     
     (new Y.Test.Console()).render('#logger');
 
